# EveryZip

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: development-progress.md  ezdb-development-plan.md  search-operator-enhancement-plan.md  tech-stack-and-roadmap.md
src/: app.manifest  app_version.h  database.cpp  database.h  file_scanner.cpp  file_scanner.h  icon_cache.cpp  icon_cache.h  index_store.cpp  index_store.h  indexer.cpp  indexer.h  logger.cpp  logger.h  main.cpp  main_window.cpp  main_window.h  resource.h  row_cache.cpp  row_cache.h  string_utils.cpp  string_utils.h  strings.rc  tray_icon.cpp  tray_icon.h  types.h  update_checker.cpp  update_checker.h  user_config.cpp  user_config.h
src/config/: advconfig.cpp  advconfig.h  eaconfig.cpp  eaconfig.h  user_config.cpp  user_config.h
src/ezdb/: ezdb.c  ezdb.h
src/parser/: archive_parser.h  archive_parser_factory.cpp  archive_parser_factory.h  libarchive_parser.cpp  libarchive_parser.h  rar_archive_parser.cpp  rar_archive_parser.h  sevenzip_archive_parser.cpp  sevenzip_archive_parser.h  zip_archive_parser.cpp  zip_archive_parser.h
src/window/: about_window.cpp  about_window.h  license_text.cpp  license_text.h  main_window.cpp  main_window.h  settings_window.cpp  settings_window.h  update_prompt_window.cpp  update_prompt_window.h  window_utils.cpp  window_utils.h
test/: CMakeLists.txt  README_FILE_TRACKER.md  query_db.cpp  test_config.cfg  test_config.cpp  test_fdb.c  test_file_tracker.cpp  test_index_store.cpp  test_mft_scan.cpp  test_rar.cpp  test_sevenzip.cpp  test_usn_scan.cpp  test_zip.cpp
test_data/: files_query_syntax.txt
tools/: CMakeLists.txt  ezdb_bench.c  ezdb_query_syntax_tests.py  generate_zip_test_data.py  list_all_files.c  list_all_files.py
